// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check-deployment-health - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "**TROUBLESHOOTING SKILL** - Diagnose model deployment health issues in Microsoft Foundry (Azure AI Foundry / Azure OpenAI).
USE FOR: deployment health, deployment status, deployment failed, provisioning error, deployment stuck, deployment not working, model not responding, inference failing, deployment degraded, deployment monitoring, health check, endpoint not working, deployment timeout, creating state, provisioning stuck, deployment errors, check deployment, model endpoint down, inference errors.
DO NOT USE FOR: model availability checks (use check-model-availability), rate limiting/429 errors (use diagnose-429-errors), quota requests (use diagnose-429-errors), RBAC permissions (use microsoft-foundry rbac), deploying new models (use microsoft-foundry).
INVOKES: \`azure__foundry\` (deployment status), \`azure__monitor\` (metrics/logs), \`mcp__plugin_azure_azure__quota\` MCP tools for diagnostics.
FOR CLI USERS: Azure CLI fallback documented for each step.
",
  "extractedKeywords": [
    "availability",
    "azure",
    "azure__foundry",
    "azure__monitor",
    "check",
    "check-model-availability",
    "checks",
    "cli",
    "creating",
    "degraded",
    "deploy",
    "deploying",
    "deployment",
    "diagnose",
    "diagnose-429-errors",
    "diagnostic",
    "diagnostics",
    "documented",
    "down",
    "each",
    "endpoint",
    "error",
    "errors",
    "failed",
    "failing",
    "fallback",
    "foundry",
    "health",
    "inference",
    "invokes",
    "issues",
    "limiting",
    "logs",
    "mcp",
    "mcp__plugin_azure_azure__quota",
    "metrics",
    "microsoft",
    "microsoft-foundry",
    "model",
    "models",
    "monitor",
    "monitoring",
    "openai",
    "permissions",
    "provisioning",
    "quota",
    "rate",
    "rbac",
    "requests",
    "responding",
    "skill",
    "state",
    "status",
    "step",
    "stuck",
    "timeout",
    "tools",
    "troubleshooting",
    "users",
    "working",
  ],
  "name": "check-deployment-health",
}
`;

exports[`check-deployment-health - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "availability",
  "azure",
  "azure__foundry",
  "azure__monitor",
  "check",
  "check-model-availability",
  "checks",
  "cli",
  "creating",
  "degraded",
  "deploy",
  "deploying",
  "deployment",
  "diagnose",
  "diagnose-429-errors",
  "diagnostic",
  "diagnostics",
  "documented",
  "down",
  "each",
  "endpoint",
  "error",
  "errors",
  "failed",
  "failing",
  "fallback",
  "foundry",
  "health",
  "inference",
  "invokes",
  "issues",
  "limiting",
  "logs",
  "mcp",
  "mcp__plugin_azure_azure__quota",
  "metrics",
  "microsoft",
  "microsoft-foundry",
  "model",
  "models",
  "monitor",
  "monitoring",
  "openai",
  "permissions",
  "provisioning",
  "quota",
  "rate",
  "rbac",
  "requests",
  "responding",
  "skill",
  "state",
  "status",
  "step",
  "stuck",
  "timeout",
  "tools",
  "troubleshooting",
  "users",
  "working",
]
`;
